--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ Pillow = "^9.0.0"
 pandas = "1.3.5"
 opencv-python = "^4.5.5"
 mediapipe = "^0.8.9"
+openpyxl = "^3.0.9"
+scipy = "^1.8.0"
+tqdm = "^4.64.0"
+sklearn = "^0.0"
+pydot = "^1.4.2"
+graphviz = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.6.1"
