--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ tqdm = "^4.64.0"
 sklearn = "^0.0"
 pydot = "^1.4.2"
 graphviz = "^0.19.1"
+noaa-sdk = "^0.1.21"
+beautifulsoup4 = "^4.11.1"
+lxml = "^4.8.0"
+html5lib = "^1.1"
+selenium = "^4.1.3"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.6.1"
