--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ beautifulsoup4 = "^4.11.1"
 lxml = "^4.8.0"
 html5lib = "^1.1"
 selenium = "^4.1.3"
+xgboost = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.6.1"
