--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ tqdm = "^4.64.0"
 sklearn = "^0.0"
 pydot = "^1.4.2"
 graphviz = "^0.19.1"
+xgboost = "^1.6.1"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.6.1"
